--- a/index.html
+++ b/index.html
@@ -1,1 +1,26 @@
-<h1>Hola mundo, esta es mi práctica</h1>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Web de Hugo Ferreiro</title>
+</head>
+<body>
+    <h1>Práctica: Laboratorio de Redes</h1>
+
+    <h2>Alumno: Hugo Ferreiro Bravo</h2>
+
+    <p>
+        Si necesitas contactar conmigo, puedes hacerlo aquí: 
+        <a href="mailto:hugo.ferreiro.bravo@udc.es">Enviar correo electrónico</a>
+    </p>
+
+    <hr>
+
+    <p>
+        Esta web es accesible gracias al servicio de: 
+        <a href="https://freedns.afraid.org">Free DNS</a>
+    </p>
+
+</body>
+</html>
